<resources>
    <string name="app_name">Subtitle Manager</string>

    <!-- Top right menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_info">Information</string>

    <!-- File selection screen -->
    <string name="select_prompt">Select a subtitle file!</string>
    <string name="no_file_selected">No file selected&#8230;</string>
    <string name="browse_button_text">Browse</string>
    <string name="reset_selected_file">Reset selected file</string>
    <string name="edit_button_text">Edit subtitles</string>
    <string name="adjust_button_text">Adjust timing</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="create_new">Create new subtitle file</string>

    <!-- Permissions -->
    <string name="need_read_permission">This application needs FILE READING permission!</string>
    <string name="need_write_permission">This application needs FILE WRITING permission!</string>

    <!-- Settings screen -->
    <string name="selected_extensions">Selected subtitle types</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="default_folder">Default folder</string>
    <string name="no_folder_selected">No folder selected&#8230;</string>
    <string name="def_folder_deleted">The default folder was deleted</string>
    <string name="reset_def_folder">Reset default folder</string>
    <string name="default_folder_was_reset">Default folder was reset</string>
    <string name="no_extension_selected">No extensions enabled!</string>
    <string name="enabled_extensions_info">
        Disabled extension types will be completely invisible for the app.
    </string>
    <string name="default_folder_info">
        The default folder will be used to look for subtitle files and to select a place to save
        new ones to.
    </string>

    <!-- Timing adjuster screen -->
    <string name="adjuster_label">Adjust timing</string>
    <string name="delay_or_speed_up">Operation:</string>
    <string name="delay">Delay</string>
    <string name="speed_up">Speed up</string>
    <string name="save">Save changes</string>
    <string name="dont_save">Don\'t save</string>
    <string name="seconds">second</string>
    <string name="milliseconds">milli sec.</string>
    <string name="invalid_timings">Invalid timings entered!</string>
    <string name="file_saved">Changes saved!</string>
    <string name="file_save_error">Failed to save changes!</string>
    <string name="adjust_operation_performed">%1$s performed successfully</string>
    <string name="unsaved_changed">There are unsaved changes!</string>
    <string name="invalid_subtitle_file">"Invalid subtitle file: \n%1$s"</string>
    <string name="adjuster_info_invalid">
        Invalid timings are marked with yellow. These can\'t be adjusted!
    </string>
    <string name="adjuster_info_adjust_individually">
        You can adjust individual components by tapping them!
    </string>

    <!-- The edit text activity -->
    <string name="edit_text_label">Edit subtitle text</string>
    <string name="select_component_prompt">Select the component to edit</string>
    <string name="edit_text_info">Tap on a subtitle component to edit it\'s text</string>
    <string name="edit">Edit</string>
    <string name="invalid_text">You must enter some text!</string>
    <string name="edit_text_performed">Text changed!</string>

    <!-- Add and remove components activity -->
    <string name="add_remove_label">Add/remove</string>
    <string name="remove_component_info">Tap a component to remove it</string>
    <string name="add_new_component_here">Add component here</string>
    <string name="add_new_component_to_beginning">Add new component to the beginning</string>
    <string name="create_new_component">Create new component</string>
    <string name="confirm_delete_component">Are you sure you want to delete this component?</string>
    <string name="dont_ask_again">Don\'t ask me again</string>
    <string name="delete">Delete</string>

    <!-- Create new component activity -->
    <string name="text_to_display">Text to display</string>
    <string name="from_info">Text appear time</string>
    <string name="to_info">Text disappear time</string>
    <string name="hours">hour</string>
    <string name="minute">minute</string>
    <string name="milliseconds_full">millisecond</string>
    <string name="create">Create</string>
    <string name="end_before_start_error">Disappear time (%1$s) can\'t be before appear time (%2$s)!</string>
    <string name="overlap_warning">Error: Overlap</string>
    <string name="start_before_prev_error">
        Appear time (%1$s) is before previous component disappear time (%2$s)!
    </string>
    <string name="end_after_next_error">
        Disappear time (%1$s) is after next component appear time (%2$s)!
    </string>

    <!-- Convert activity -->
    <string name="convert">Convert</string>

    <!-- Create new file sub activity -->
    <string name="create_file_label">Create new file</string>
    <string name="file_name">File name</string>
    <string name="no_file_name">Enter file name here…</string>
    <string name="file_extension">Subtitle type</string>
    <string name="select_save_folder">Select save folder</string>
    <string name="create_file">Create file</string>
    <string name="dont_enter_extension">Don\'t enter the file extension, select it below!</string>
    <string name="must_select_save_folder">You must select a save folder!</string>
    <string name="must_select_file_name">You must enter a file name!</string>
    <string name="file_create_error">
        Couldn\'t create new file! Check write permissions in the selected folder!
    </string>
    <string name="file_exists">File already exists! Do you want to overwrite?</string>
    <string name="overwrite">Overwrite</string>

    <!-- Conversion -->
    <string name="convert_label">Convert file</string>
    <string name="convert_into">Convert %1$s into</string>
    <string name="no_other_extensions">Only the %1$s extension is enabled! Enable more in the settings
    to be able to convert!</string>
    <string name="convert_successful">Conversion successful</string>

    <!-- Ad constants are loaded at build time, depending on the build type. -->

</resources>
