<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirmRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FileSelectorActivity"
    android:layout_marginEnd="8dp">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.AppBarOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".FileSelectorActivity">

        <TextView
            android:id="@+id/selectorPromptTextView"
            style="@style/big_bold_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/select_prompt"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/select_prompt" />

        <TextView
            android:id="@+id/locationDisplayerTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/dark_background_black_border_rounded"
            android:maxLines="2"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/no_file_selected"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectorPromptTextView" />

        <Button
            android:id="@+id/browseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/dark_background_black_border_rounded"
            android:onClick="selectFileButtonOnClick"
            android:text="@string/browse_button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toStartOf="@id/resetSelectedFileButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationDisplayerTextView"
            tools:text="@string/browse_button_text" />

        <ImageButton
            android:id="@+id/resetSelectedFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/dark_background_black_border_rounded"
            android:contentDescription="@string/reset_selected_file"
            android:onClick="resetSelectedFileOnClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/browseButton"
            app:layout_constraintTop_toBottomOf="@+id/locationDisplayerTextView"
            app:srcCompat="@android:drawable/ic_delete" />

        <ScrollView
            android:id="@+id/fadeComponents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetSelectedFileButton">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/adjustButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/dark_background_black_border_rounded"
                    android:clickable="false"
                    android:onClick="adjustButtonOnClick"
                    android:text="@string/adjust_button_text"
                    android:textAllCaps="false"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/dark_background_black_border_rounded"
                    android:clickable="false"
                    android:onClick="editButtonOnClick"
                    android:text="@string/edit_button_text"
                    android:textAllCaps="false"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/addRemoveButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/dark_background_black_border_rounded"
                    android:clickable="false"
                    android:gravity="center"
                    android:onClick="addRemoveButtonOnClick"
                    android:text="@string/add_remove_label"
                    android:textAllCaps="false"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/convertButton"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/dark_background_black_border_rounded"
                    android:onClick="convertButtonOnClick"
                    android:text="@string/convert"
                    android:textAllCaps="false" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/createFileBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/big_bold_text"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="40"
                android:gravity="center"
                android:text="@string/create_new" />

            <ImageButton
                android:id="@+id/newFileButton"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dark_background_black_border_rounded"
                android:contentDescription="@string/create_new"
                android:foreground="@android:drawable/ic_input_add"
                android:onClick="createNewFile"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>